# TraceRat

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
api-gateway/: Dockerfile  README.md  requirements.txt
api-gateway/app/: dependencies.py  main.py  models.py
api-gateway/tests/: conftest.py  test_health.py  test_results.py  test_webhook.py
dependency-graph/: Dockerfile  README.md  requirements-dev.txt  requirements.txt
dependency-graph/app/: __init__.py  consumer.py  main.py  models.py
dependency-graph/tests/: conftest.py  test_consumer.py  test_delta_calculator.py  test_health.py  test_neo4j_client.py  test_telemetry_consumer.py
diff-fetching-service/: Dockerfile  README.md  requirements-dev.txt
diff-fetching-service/app/: __init__.py  consumer.py  main.py  models.py
diff-fetching-service/tests/: __init__.py  conftest.py  test_consumer.py  test_diff_fetcher.py  test_health.py  test_module_mapper.py
docs/: Architecture.md  DEMO_GUIDE.md
llm-service/: Dockerfile  requirements.txt
llm-service/app/: consumer.py  main.py  (+1 more)
monitoring/: prometheus.yml
prediction-service/: Dockerfile  README.md  requirements.txt
prompt-generation-service/: Dockerfile  README.md  requirements.txt
secrets/: README.md
shared/: __init__.py  config.py  github_auth.py  kafka_consumer.py  kafka_producer.py  logging.py  metrics.py
tools/: inject_event.py  requirements.txt  seed_prs.py  seed_repo.py
vectorization-service/: Dockerfile  README.md  requirements.txt
(+66 files in other folders)
